working with data and building forms before exercies in building form

--- a/movies/movies.csproj
+++ b/movies/movies.csproj
@@ -181,58 +181,40 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201911200007126_InitialModel.cs" />
-    <Compile Include="Migrations\201911200007126_InitialModel.Designer.cs">
-      <DependentUpon>201911200007126_InitialModel.cs</DependentUpon>
+    <Compile Include="Migrations\201912101345013_Initial.cs" />
+    <Compile Include="Migrations\201912101345013_Initial.Designer.cs">
+      <DependentUpon>201912101345013_Initial.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201911210031019_AddIsSubscribedToCustomer.cs" />
-    <Compile Include="Migrations\201911210031019_AddIsSubscribedToCustomer.Designer.cs">
-      <DependentUpon>201911210031019_AddIsSubscribedToCustomer.cs</DependentUpon>
+    <Compile Include="Migrations\201912111915524_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201912111915524_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201912111915524_PopulateMembershipTypes.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201911210039100_AddMembershipType.cs" />
-    <Compile Include="Migrations\201911210039100_AddMembershipType.Designer.cs">
-      <DependentUpon>201911210039100_AddMembershipType.cs</DependentUpon>
+    <Compile Include="Migrations\201912111957330_IntegratingMovieWithGenre.cs" />
+    <Compile Include="Migrations\201912111957330_IntegratingMovieWithGenre.Designer.cs">
+      <DependentUpon>201912111957330_IntegratingMovieWithGenre.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201911210042049_PopulateMembershipTypes.cs" />
-    <Compile Include="Migrations\201911210042049_PopulateMembershipTypes.Designer.cs">
-      <DependentUpon>201911210042049_PopulateMembershipTypes.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201911210055362_ApplyAnnotationToCustomerName.cs" />
-    <Compile Include="Migrations\201911210055362_ApplyAnnotationToCustomerName.Designer.cs">
-      <DependentUpon>201911210055362_ApplyAnnotationToCustomerName.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201912090240417_AddNamMembershipType.cs" />
-    <Compile Include="Migrations\201912090240417_AddNamMembershipType.Designer.cs">
-      <DependentUpon>201912090240417_AddNamMembershipType.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201912090244389_SetNameOfMembershipTypes.cs" />
-    <Compile Include="Migrations\201912090244389_SetNameOfMembershipTypes.Designer.cs">
-      <DependentUpon>201912090244389_SetNameOfMembershipTypes.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201912090254457_AddBirthdateToCustomer.cs" />
-    <Compile Include="Migrations\201912090254457_AddBirthdateToCustomer.Designer.cs">
-      <DependentUpon>201912090254457_AddBirthdateToCustomer.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201912090257031_AddBirthdayToCustomers.cs" />
-    <Compile Include="Migrations\201912090257031_AddBirthdayToCustomers.Designer.cs">
-      <DependentUpon>201912090257031_AddBirthdayToCustomers.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201912090302407_UpdateBirthDateNotRequired.cs" />
-    <Compile Include="Migrations\201912090302407_UpdateBirthDateNotRequired.Designer.cs">
-      <DependentUpon>201912090302407_UpdateBirthDateNotRequired.cs</DependentUpon>
+    <Compile Include="Migrations\201912112003024_Genres.cs" />
+    <Compile Include="Migrations\201912112003024_Genres.Designer.cs">
+      <DependentUpon>201912112003024_Genres.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CustomerFormViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\aspnet-movies-20191119123918.mdf" />
+    <Content Include="App_Data\aspnet-movies-20191119123918_log.ldf">
+      <DependentUpon>aspnet-movies-20191119123918.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-lumen.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -255,7 +237,9 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -294,9 +278,22 @@
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
     <Content Include="Views\Customer\Details.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
+    <Content Include="Views\Customer\CustomerForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <EmbeddedResource Include="Migrations\201912101345013_Initial.resx">
+      <DependentUpon>201912101345013_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201912111915524_PopulateMembershipTypes.resx">
+      <DependentUpon>201912111915524_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201912111957330_IntegratingMovieWithGenre.resx">
+      <DependentUpon>201912111957330_IntegratingMovieWithGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201912112003024_Genres.resx">
+      <DependentUpon>201912112003024_Genres.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -310,38 +307,6 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201911200007126_InitialModel.resx">
-      <DependentUpon>201911200007126_InitialModel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201911210031019_AddIsSubscribedToCustomer.resx">
-      <DependentUpon>201911210031019_AddIsSubscribedToCustomer.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201911210039100_AddMembershipType.resx">
-      <DependentUpon>201911210039100_AddMembershipType.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201911210042049_PopulateMembershipTypes.resx">
-      <DependentUpon>201911210042049_PopulateMembershipTypes.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201911210055362_ApplyAnnotationToCustomerName.resx">
-      <DependentUpon>201911210055362_ApplyAnnotationToCustomerName.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201912090240417_AddNamMembershipType.resx">
-      <DependentUpon>201912090240417_AddNamMembershipType.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201912090244389_SetNameOfMembershipTypes.resx">
-      <DependentUpon>201912090244389_SetNameOfMembershipTypes.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201912090254457_AddBirthdateToCustomer.resx">
-      <DependentUpon>201912090254457_AddBirthdateToCustomer.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201912090257031_AddBirthdayToCustomers.resx">
-      <DependentUpon>201912090257031_AddBirthdayToCustomers.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201912090302407_UpdateBirthDateNotRequired.resx">
-      <DependentUpon>201912090302407_UpdateBirthDateNotRequired.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
